force-app/main/default/objects/Display_Format__c/Display_Format__c.object-meta.xml
<CustomObject>
    <label>Display Format</label>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Display Format Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Display Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>