force-app/main/default/objects/Display_Format__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <label>Display Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>