force-app/main/default/objects/Display_Format__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Display Formats</relationshipLabel>
    <relationshipName>Display_Formats</relationshipName>
    <type>Lookup</type>
</CustomField>