force-app/main/default/objects/Display_Format__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Display Formats</relationshipLabel>
    <relationshipName>Display_Formats</relationshipName>
    <type>Lookup</type>
</CustomField>