force-app/main/default/objects/Display_Format__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Display__c</columns>
    <columns>Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>