force-app/main/default/objects/Display_Format__c/listViews/Yesterday.listView-meta.xml
<ListView>
    <fullName>Yesterday</fullName>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Display__c</columns>
    <columns>Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday</label>
</ListView>